<?xml version="1.0"?>
<package>
  <name>jackal_world</name>
  <version>0.1.0</version>
  <description>Launchfiles to use Jackal in Gazebo modified.</description>

  <maintainer email="schilling@rob.uni-luebck.de">Lars Schilling</maintainer>
  <author>Lars Schilling</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.5">jackal_control</run_depend>
  <run_depend version_gte="0.5">jackal_description</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>

</package>
